--- a/reference/ins_api/paths/actual-user-filters-v2-filters-GET.yaml
+++ b/reference/ins_api/paths/actual-user-filters-v2-filters-GET.yaml
@@ -1,51 +1,45 @@
-responses:
-  '200':
-    content:
-      application/json:
-        schema:
-          items:
-            $ref: '#/components/schemas/FiltersModel'
-          type: array
-          title: Response Get Actual User Filters V2 Filters Get
-    description: Retrieve actual user filters list
-  '422':
-    content:
-      application/json:
-        schema:
-          $ref: '#/components/schemas/HTTPValidationError'
-    description: Validation Error
-  '403':
-    content:
-      application/json:
-        schema:
-          $ref: '#/components/schemas/Error'
-    description: Forbidden
-  '401':
-    content:
-      application/json:
-        schema:
-          $ref: '#/components/schemas/Error'
-    description: Unauthorized
-  '400':
-    content:
-      application/json:
-        schema:
-          $ref: '#/components/schemas/Error'
-    description: Bad Request
-description: Zwraca listę filtrów przypisanych do aktualnego użytkownika.
-parameters:
-- description: Klucz autoryzacji
-  required: false
-  in: header
-  schema:
-    type: string
-    title: Authorization
-  example: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
-  name: Authorization
 tags:
 - filters_iapi
 summary: Get Actual User Filters
 operationId: get_actual_user_filters_v2_filters_get
+parameters:
+- required: false
+  schema:
+    title: Authorization
+    type: string
+  example: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
+  name: Authorization
+  in: header
+  description: Klucz autoryzacji
+responses:
+  '200':
+    description: Retrieve actual user filters list
+    content:
+      application/json:
+        schema:
+          title: Response Get Actual User Filters V2 Filters Get
+          type: array
+          items:
+            $ref: '#/components/schemas/FiltersModel'
+  '400':
+    description: Bad Request
+    content:
+      application/json:
+        schema:
+          $ref: '#/components/schemas/Error'
+  '401':
+    description: Unauthorized
+    content:
+      application/json:
+        schema:
+          $ref: '#/components/schemas/Error'
+  '403':
+    description: Forbidden
+    content:
+      application/json:
+        schema:
+          $ref: '#/components/schemas/Error'
+description: Zwraca listę filtrów przypisanych do aktualnego użytkownika.
 components:
   schemas:
     $ref: ../../common/schemas.yaml
