--- a/reference/ins_api/paths/filter-v2-filters-DELETE.yaml
+++ b/reference/ins_api/paths/filter-v2-filters-DELETE.yaml
@@ -1,54 +1,50 @@
-responses:
-  '422':
-    content:
-      application/json:
-        schema:
-          $ref: '#/components/schemas/HTTPValidationError'
-    description: Validation Error
-  '403':
-    content:
-      application/json:
-        schema:
-          $ref: '#/components/schemas/Error'
-    description: Forbidden
-  '204':
-    description: Delete filters
-  '401':
-    content:
-      application/json:
-        schema:
-          $ref: '#/components/schemas/Error'
-    description: Unauthorized
-  '400':
-    content:
-      application/json:
-        schema:
-          $ref: '#/components/schemas/Error'
-    description: Bad Request
-description: Usuwa filtry o identyfikatorach przekazanych w parametrze ids w query
-  stringu (po przecinku). W przypadku sukcesu metoda zwraca kod odpowiedzi 204 No
-  Content.
-parameters:
-- description: Unikalny identyfikator filtra
-  required: false
-  in: query
-  name: ids
-  schema:
-    type: string
-    example: '222222222222222222222222'
-    title: Ids
-- description: Klucz autoryzacji
-  required: false
-  in: header
-  schema:
-    type: string
-    title: Authorization
-  example: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
-  name: Authorization
 tags:
 - filters_iapi
 summary: Delete Filter
 operationId: delete_filter_v2_filters_delete
+parameters:
+- required: false
+  schema:
+    title: Ids
+    type: string
+    example: '222222222222222222222222'
+    maxLength: 24
+    minLength: 24
+  name: ids
+  in: query
+  description: Unikalny identyfikator filtra
+- required: false
+  schema:
+    title: Authorization
+    type: string
+  example: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
+  name: Authorization
+  in: header
+  description: Klucz autoryzacji
+responses:
+  '204':
+    description: Delete filters
+  '400':
+    description: Bad Request
+    content:
+      application/json:
+        schema:
+          $ref: '#/components/schemas/Error'
+  '401':
+    description: Unauthorized
+    content:
+      application/json:
+        schema:
+          $ref: '#/components/schemas/Error'
+  '403':
+    description: Forbidden
+    content:
+      application/json:
+        schema:
+          $ref: '#/components/schemas/Error'
+description: Usuwa filtry o identyfikatorach przekazanych w parametrze ids w query
+  stringu (po przecinku). W przypadku sukcesu metoda zwraca kod odpowiedzi 204 No
+  Content.
 components:
   schemas:
     $ref: ../../common/schemas.yaml
