--- a/reference/ins_api/paths/reports-v2-reports-DELETE.yaml
+++ b/reference/ins_api/paths/reports-v2-reports-DELETE.yaml
@@ -1,58 +1,52 @@
-responses:
-  '422':
-    content:
-      application/json:
-        schema:
-          $ref: '#/components/schemas/HTTPValidationError'
-    description: Validation Error
-  '403':
-    content:
-      application/json:
-        schema:
-          $ref: '#/components/schemas/Error'
-    description: Forbidden
-  '204':
-    description: Delete reports
-  '401':
-    content:
-      application/json:
-        schema:
-          $ref: '#/components/schemas/Error'
-    description: Unauthorized
-  '400':
-    content:
-      application/json:
-        schema:
-          $ref: '#/components/schemas/Error'
-    description: Bad Request
-description: Usuwa raporty o identyfikatorach przekazanych w parametrze ids w query
-  stringu (po przecinku). W przypadku sukcesu metoda zwraca kod odpowiedzi 204 No
-  Content.
-parameters:
-- required: true
-  in: query
-  description: A list of id's whose ones are strings representing the ObjectId from
-    bson.
-  name: ids
-  schema:
-    minLength: 24
-    example: '222222222222222222222222'
-    type: string
-    description: A list of id's whose ones are strings representing the ObjectId from
-      bson.
-    title: List of id
-- description: Klucz autoryzacji
-  required: false
-  in: header
-  schema:
-    type: string
-    title: Authorization
-  example: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
-  name: Authorization
 tags:
 - reports_iapi
 summary: Delete Reports
 operationId: delete_reports_v2_reports_delete
+parameters:
+- description: Lista identyfikatorów raportów.
+  required: true
+  schema:
+    title: List of id
+    minLength: 24
+    type: string
+    description: A list of id's whose ones are strings representing the ObjectId from
+      bson.
+    example: '222222222222222222222222'
+    maxLength: 24
+  name: ids
+  in: query
+- required: false
+  schema:
+    title: Authorization
+    type: string
+  example: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
+  name: Authorization
+  in: header
+  description: Klucz autoryzacji
+responses:
+  '204':
+    description: Delete reports
+  '400':
+    description: Bad Request
+    content:
+      application/json:
+        schema:
+          $ref: '#/components/schemas/Error'
+  '401':
+    description: Unauthorized
+    content:
+      application/json:
+        schema:
+          $ref: '#/components/schemas/Error'
+  '403':
+    description: Forbidden
+    content:
+      application/json:
+        schema:
+          $ref: '#/components/schemas/Error'
+description: Usuwa raporty o identyfikatorach przekazanych w parametrze ids w query
+  stringu (po przecinku). W przypadku sukcesu metoda zwraca kod odpowiedzi 204 No
+  Content.
 components:
   schemas:
     $ref: ../../common/schemas.yaml
