--- a/reference/ins_api/paths/update-by-id-v2-updates-id-GET.yaml
+++ b/reference/ins_api/paths/update-by-id-v2-updates-id-GET.yaml
@@ -1,66 +1,64 @@
-responses:
-  '200':
-    content:
-      application/json:
-        schema:
-          $ref: '#/components/schemas/UpdatesModel'
-    description: Retrieve update by id
-  '404':
-    content:
-      application/json:
-        schema:
-          $ref: '#/components/schemas/Error'
-    description: Not Found
-  '403':
-    content:
-      application/json:
-        schema:
-          $ref: '#/components/schemas/Error'
-    description: Forbidden
-  '401':
-    content:
-      application/json:
-        schema:
-          $ref: '#/components/schemas/Error'
-    description: Unauthorized
-  '400':
-    content:
-      application/json:
-        schema:
-          $ref: '#/components/schemas/Error'
-    description: Bad Request
-  '422':
-    content:
-      application/json:
-        schema:
-          $ref: '#/components/schemas/HTTPValidationError'
-    description: Validation Error
-description: Zwraca dane aktualizacji o podanym id.
-parameters:
-- description: Unikalny identyfikator zarejestrowanej aktualizacji
-  required: true
-  in: path
-  name: id
-  schema:
-    anyOf:
-    - type: integer
-    - enum:
-      - last
-      type: string
-    example: '222222222222222222222222'
-    title: Id
-- description: Klucz autoryzacji
-  required: false
-  in: header
-  schema:
-    type: string
-    title: Authorization
-  example: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
-  name: Authorization
 tags:
 - updates_iapi
 summary: Get Update By Id
 operationId: get_update_by_id_v2_updates__id__get
+parameters:
+- required: true
+  schema:
+    title: Id
+    anyOf:
+    - exclusiveMaximum: 9007199254740991.0
+      minimum: 0.0
+      type: integer
+    - enum:
+      - last
+      type: string
+      description: Zwraca ostatnie dane aktualizacji
+    example: '222222222222222222222222'
+    maxLength: 24
+  name: id
+  in: path
+  description: Unikalny identyfikator zarejestrowanej aktualizacji
+- required: false
+  schema:
+    title: Authorization
+    type: string
+  example: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
+  name: Authorization
+  in: header
+  description: Klucz autoryzacji
+responses:
+  '200':
+    description: Retrieve update by id
+    content:
+      application/json:
+        schema:
+          $ref: '#/components/schemas/UpdatesModel'
+  '400':
+    description: Bad Request
+    content:
+      application/json:
+        schema:
+          $ref: '#/components/schemas/Error'
+  '401':
+    description: Unauthorized
+    content:
+      application/json:
+        schema:
+          $ref: '#/components/schemas/Error'
+  '403':
+    description: Forbidden
+    content:
+      application/json:
+        schema:
+          $ref: '#/components/schemas/Error'
+  '404':
+    description: Not Found
+    content:
+      application/json:
+        schema:
+          $ref: '#/components/schemas/Error'
+description: Zwraca dane aktualizacji o podanym id.
 components:
   schemas:
     $ref: ../../common/schemas.yaml
