--- a/reference/ins_api/paths/user-filter-by-id-v2-filters-id-GET.yaml
+++ b/reference/ins_api/paths/user-filter-by-id-v2-filters-id-GET.yaml
@@ -1,66 +1,62 @@
-responses:
-  '200':
-    content:
-      application/json:
-        schema:
-          $ref: '#/components/schemas/FiltersModel'
-    description: Retrieve filter by id
-  '404':
-    content:
-      application/json:
-        schema:
-          $ref: '#/components/schemas/Error'
-    description: Not Found
-  '403':
-    content:
-      application/json:
-        schema:
-          $ref: '#/components/schemas/Error'
-    description: Forbidden
-  '401':
-    content:
-      application/json:
-        schema:
-          $ref: '#/components/schemas/Error'
-    description: Unauthorized
-  '400':
-    content:
-      application/json:
-        schema:
-          $ref: '#/components/schemas/Error'
-    description: Bad Request
-  '422':
-    content:
-      application/json:
-        schema:
-          $ref: '#/components/schemas/HTTPValidationError'
-    description: Validation Error
-description: Zwraca filtr o podanym id.
+tags:
+- filters_iapi
+summary: Get User Filter By Id
+operationId: get_user_filter_by_id_v2_filters__id__get
 parameters:
-- description: Unikalny identyfikator filtra
-  required: true
-  in: path
-  name: id
+- required: true
   schema:
+    title: Id
     anyOf:
     - type: string
     - enum:
       - last
       type: string
+      description: Zwraca ostatni dostępny filtr
     example: '222222222222222222222222'
-    title: Id
-- description: Klucz autoryzacji
-  required: false
-  in: header
+    maxLength: 24
+  name: id
+  in: path
+  description: Unikalny identyfikator filtra
+- required: false
   schema:
-    type: string
     title: Authorization
+    type: string
   example: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
   name: Authorization
-tags:
-- filters_iapi
-summary: Get User Filter By Id
-operationId: get_user_filter_by_id_v2_filters__id__get
+  in: header
+  description: Klucz autoryzacji
+responses:
+  '200':
+    description: Retrieve filter by id
+    content:
+      application/json:
+        schema:
+          $ref: '#/components/schemas/FiltersModel'
+  '400':
+    description: Bad Request
+    content:
+      application/json:
+        schema:
+          $ref: '#/components/schemas/Error'
+  '401':
+    description: Unauthorized
+    content:
+      application/json:
+        schema:
+          $ref: '#/components/schemas/Error'
+  '403':
+    description: Forbidden
+    content:
+      application/json:
+        schema:
+          $ref: '#/components/schemas/Error'
+  '404':
+    description: Not Found
+    content:
+      application/json:
+        schema:
+          $ref: '#/components/schemas/Error'
+description: Zwraca filtr o podanym id.
 components:
   schemas:
     $ref: ../../common/schemas.yaml
