--- a/reference/ins_api/paths/user-filters-v2-filters-id-PATCH.yaml
+++ b/reference/ins_api/paths/user-filters-v2-filters-id-PATCH.yaml
@@ -1,62 +1,58 @@
-responses:
-  '200':
-    content:
-      application/json:
-        schema:
-          $ref: '#/components/schemas/FiltersModel'
-    description: Update user filter
-  '422':
-    content:
-      application/json:
-        schema:
-          $ref: '#/components/schemas/HTTPValidationError'
-    description: Validation Error
-  '403':
-    content:
-      application/json:
-        schema:
-          $ref: '#/components/schemas/Error'
-    description: Forbidden
-  '401':
-    content:
-      application/json:
-        schema:
-          $ref: '#/components/schemas/Error'
-    description: Unauthorized
-  '400':
-    content:
-      application/json:
-        schema:
-          $ref: '#/components/schemas/Error'
-    description: Bad Request
-parameters:
-- description: Unikalny identyfikator filtra
-  required: true
-  in: path
-  name: id
-  schema:
-    type: string
-    example: '222222222222222222222222'
-    title: Id
-- description: Klucz autoryzacji
-  required: false
-  in: header
-  schema:
-    type: string
-    title: Authorization
-  example: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
-  name: Authorization
 tags:
 - filters_iapi
-description: Modyfikuje filtr o podanym id.
 summary: Patch User Filters
+operationId: patch_user_filters_v2_filters__id__patch
+parameters:
+- required: true
+  schema:
+    title: Id
+    type: string
+    example: '222222222222222222222222'
+    maxLength: 24
+    minLength: 24
+  name: id
+  in: path
+  description: Unikalny identyfikator filtra
+- required: false
+  schema:
+    title: Authorization
+    type: string
+  example: aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee
+  name: Authorization
+  in: header
+  description: Klucz autoryzacji
 requestBody:
   content:
     application/json:
       schema:
         $ref: '#/components/schemas/UpdateFiltersModel'
   required: true
-operationId: patch_user_filters_v2_filters__id__patch
+responses:
+  '200':
+    description: Update user filter
+    content:
+      application/json:
+        schema:
+          $ref: '#/components/schemas/FiltersModel'
+  '400':
+    description: Bad Request
+    content:
+      application/json:
+        schema:
+          $ref: '#/components/schemas/Error'
+  '401':
+    description: Unauthorized
+    content:
+      application/json:
+        schema:
+          $ref: '#/components/schemas/Error'
+  '403':
+    description: Forbidden
+    content:
+      application/json:
+        schema:
+          $ref: '#/components/schemas/Error'
+description: Modyfikuje filtr o podanym id.
 components:
   schemas:
     $ref: ../../common/schemas.yaml
